# python-project-lvl4

./: .flake8  .gitignore  README.md  db.sqlite3  env.example  makefile  pyproject.toml  requirements.txt
.github/workflows/: Package_tests.yml
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: tests.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  tests.py  views.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_task.py  0003_auto_20211102_2129.py  0007_auto_20211125_1944.py  0008_auto_20211125_2047.py  0011_rename_relatedmodel_tasklabels.py
templates/: base.html  index.html
templates/labels/: tasklabel_form.html
templates/registration/: logged_out.html  login.html
templates/statuses/: taskstatus_form.html
templates/tasks/: label_update.html  labels.html  lable.html  lable_update.html  lables.html  status.html  status_form.html  status_update.html  statuses.html  task.html  task_confirm_delete.html  task_form.html  task_update_form.html  tasklabel_form.html  tasklable_confirm_delete.html  tasklable_form.html  tasks_list.html  taskstatus_form.html  (+1 more)
users/: forms.py  tests.py  urls.py  views.py
(+23 files in other folders)
